systemd.user.notification-thing: After=pulseaudio, to avoid libcanberra opening alsa instead

--- a/systemd/user/notification-thing.service
+++ b/systemd/user/notification-thing.service
@@ -1,6 +1,6 @@
 [Unit]
 Requires=dbus.service
-After=xorg.target dbus.service
+After=xorg.target dbus.service pulseaudio.socket pulseaudio.service
 PartOf=startx.target
 
 [Service]
