xinitrc: move VO_* vars to separate machine-specific .env file

--- a/systemd/user/feh-screen.service
+++ b/systemd/user/feh-screen.service
@@ -2,4 +2,4 @@
 Type=oneshot
 StandardInput=socket
 StandardOutput=journal
-ExecStart=feh-screen -F=-g=1920x1080+1920
+ExecStart=feh-screen -F=-g=${VO_AUX_POS}
